Avoid "this" on constructors and static methods